--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
     <link rel="stylesheet" href="">
     <hr>
      <h1>Música</h1>
-   <p>Música é a combinação de ritmo, harmonia e melodia, de maneira agradável ao ouvido. No sentido amplo é a organização temporal de sons e silêncios (pausas). No sentido restrito, é a arte de coordenar e transmitir efeitos sonoros, harmoniosos e esteticamente válidos, podendo ser transmitida através da voz ou de instrumentos musicais.</p>
-   <p>A música é uma manifestação artística e cultural de um povo, em determinada época ou região. A música é um veículo usado para expressar os sentimentos.</p>
+   <p>Música éuma forma de artem que se constitui na combinação de vários ritmos, harmonia e melodia, de maneira agradável ao ouvido. No sentido amplo é a organização temporal de sons e silêncios (pausas). No sentido restrito, é a arte de coordenar e transmitir efeitos sonoros, harmoniosos e esteticamente válidos, podendo ser transmitida através da voz ou de instrumentos musicais.</p>
+   <p>É tambem uma manifestação artística e cultural de um povo, em determinada época ou região. A música é um veículo usado para expressar os sentimentos. </p>
     <p>A música evoluiu através dos séculos, resultando numa grande variedade de gêneros musicais, entre eles, a música sacra ou religiosa, a erudita ou clássica, a popular e a tradicional ou folclórica. Cada um dos gêneros musicais possuem uma série de subgêneros e estilos.</p>
     
-    <h2>Principais gêneros musicais</h2>
+    <h2>Alguns gêneros musicais:</h2>
     <ul>
         <li>Música erudita ou clássica</li>
         <li>Ópera</li>
