--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <h1> Evelin Cauane Fogaca de Oliveira </h1>
     <h2> Colégio Estadual Professora Reni Correia Gamper </h2>
     <h3> Matemática 2 - Programação </h3>
-    <link rel="stylesheet" href="">
     <hr>
+    <img src="musica1.jpg" alt="">
      <h1>Música</h1>
    <p>Música éuma forma de artem que se constitui na combinação de vários ritmos, harmonia e melodia, de maneira agradável ao ouvido. No sentido amplo é a organização temporal de sons e silêncios (pausas). No sentido restrito, é a arte de coordenar e transmitir efeitos sonoros, harmoniosos e esteticamente válidos, podendo ser transmitida através da voz ou de instrumentos musicais.</p>
    <p>É tambem uma manifestação artística e cultural de um povo, em determinada época ou região. A música é um veículo usado para expressar os sentimentos. </p>
