--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1> Evelin Cauane Fogaca de Oliveira </h1>
+    <h1> Evelin Cauane Fogaça de Oliveira </h1>
     <h2> Colégio Estadual Professora Reni Correia Gamper </h2>
     <h3> Matemática 2 - Programação </h3>
     <hr>
