--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         <li>Ópera</li>
         <li>Música popular</li>
         <li>Música tradicional</li>
+        <li>Música internacional</li>
     </ul>
      <img src="musica1.jpg" alt="">
   
